3421083, 3421082, 3421077, 3388301: deprecated HapiLog and add slf4j, various TestPanel refactorings and additions, reimplemented threading including external contribution of custom ExecutorServices, added TLS support removed some warnings and added Java 5 language features here and there